# apiGateway/src/swagger/swagger.json
@@ -585,6 +585,21 @@
           {
             "api_key": []
           }
+        ], 
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "category":{
+                  "type":"string"
+                }
+              }
+            }
+          }
         ],
         "responses": {
           "200": {
